--- a/funcionarios.html
+++ b/funcionarios.html
@@ -11,89 +11,12 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 
 <style>
-body { font-family: Inter, sans-serif; background:#f4f4f4; }
-
-/* NAVBAR */
-.navbar { background:#2b2f33; }
-.navbar-brand { color:#fff; font-weight:700; display:flex; align-items:center; gap:10px; }
-.navbar-brand img { height:40px; }
-
-/* TITULOS */
-.subtitulo {
-  background:#ddd;
-  text-align:center;
-  font-weight:700;
-  padding:6px;
-  margin:30px 0 15px;
+body { 
+  font-family: Inter, sans-serif; 
+  background:#f4f4f4; 
 }
 
-/* CARDS */
-.card-employee {
-  border-radius:16px;
-  overflow:hidden;
-  position:relative;
-}
-.card-employee img {
-  height:180px;
-  object-fit:cover;
-}
-
-/* BOTAO REMOVER */
-.btn-remover {
-  position:absolute;
-  top:8px;
-  right:8px;
-  width:30px;
-  height:30px;
-  border-radius:50%;
-  background:#dc3545;
-  color:#fff;
-  border:none;
-  display:none;
-  font-weight:700;
-}
-.admin-mode .btn-remover { display:block; }
-
-/* ADMIN */
-.admin-btn {
-  position:fixed;
-  right:20px;
-  bottom:20px;
-  z-index:1001;
-}
-.admin-menu {
-  position:fixed;
-  right:-380px;
-  top:0;
-  width:380px;
-  height:100%;
-  background:#fff;
-  box-shadow:-4px 0 20px rgba(0,0,0,.2);
-  padding:20px;
-  transition:.3s;
-  z-index:1000;
-}
-.admin-menu.open { right:0; }
-</style>
-</head>
-
-<body>
-  <header class="topbar">
-  <div class="container d-flex justify-content-between align-items-center">
-    <div class="d-flex align-items-center gap-3">
-      <img src="https://imgur.com/0iskhD3.png" style="height:70px;border-radius:8px">
-      <div class="logo">Central Race</div>
-    </div>
-
-    <nav class="d-none d-md-flex align-items-center nav-links">
-      <a href="index.html">Início</a>
-      <a href="tabela.html">Preços</a>
-      <a href="relatorio.html">Relatório</a>
-      <a href="funcionarios.html">Funcionários</a>
-      </a>
-    </nav>
-  </div>
-</header>
+/* ===== TOPBAR ===== */
 .topbar{
   background:#2b2f33;
   color:#fff;
@@ -117,19 +40,91 @@ body { font-family: Inter, sans-serif; background:#f4f4f4; }
   color:#cfcfcf;
 }
 
-.discord-btn{
-  display:inline-flex;
-  align-items:center;
-  gap:8px;
-  padding:8px 16px;
-  border-radius:12px;
-  background:linear-gradient(135deg,#7289da,#99a9f0);
-  color:#fff;
+/* ===== TITULOS ===== */
+.subtitulo {
+  background:#ddd;
+  text-align:center;
   font-weight:700;
-  text-decoration:none;
+  padding:6px;
+  margin:30px 0 15px;
 }
 
+/* ===== CARDS ===== */
+.card-employee {
+  border-radius:16px;
+  overflow:hidden;
+  position:relative;
+}
+.card-employee img {
+  height:180px;
+  object-fit:cover;
+}
 
+/* ===== BOTAO REMOVER ===== */
+.btn-remover {
+  position:absolute;
+  top:8px;
+  right:8px;
+  width:30px;
+  height:30px;
+  border-radius:50%;
+  background:#dc3545;
+  color:#fff;
+  border:none;
+  display:none;
+  font-weight:700;
+}
+.admin-mode .btn-remover { 
+  display:block; 
+}
+
+/* ===== ADMIN ===== */
+.admin-btn {
+  position:fixed;
+  right:20px;
+  bottom:20px;
+  z-index:1001;
+}
+.admin-menu {
+  position:fixed;
+  right:-380px;
+  top:0;
+  width:380px;
+  height:100%;
+  background:#fff;
+  box-shadow:-4px 0 20px rgba(0,0,0,.2);
+  padding:20px;
+  transition:.3s;
+  z-index:1000;
+}
+.admin-menu.open { 
+  right:0; 
+}
+</style>
+</head>
+
+<body>
+
+<!-- ===== MENU TOPO ===== -->
+<header class="topbar">
+  <div class="container d-flex justify-content-between align-items-center">
+    
+    <div class="d-flex align-items-center gap-3">
+      <img src="https://imgur.com/0iskhD3.png" style="height:70px;border-radius:8px">
+      <div class="logo">Central Race</div>
+    </div>
+
+    <nav class="d-none d-md-flex align-items-center nav-links">
+      <a href="index.html">Início</a>
+      <a href="tabela.html">Preços</a>
+      <a href="relatorio.html">Relatório</a>
+      <a href="funcionarios.html">Funcionários</a>
+    </nav>
+
+  </div>
+</header>
+
+<!-- ===== CONTEUDO ===== -->
 <main class="container my-5">
   <h2 class="text-center mb-4">Nossa Equipe</h2>
   <div id="listaCargos"></div>
@@ -291,4 +286,3 @@ renderizar();
 
 </body>
 </html>
-
