--- a/funcionarios.html
+++ b/funcionarios.html
@@ -282,7 +282,59 @@ async function renderizar() {
 }
 
 renderizar();
+  /* ===== PROTEÇÃO BÁSICA CONTRA INSPEÇÃO ===== */
+
+// Bloquear botão direito
+document.addEventListener("contextmenu", e => e.preventDefault());
+
+// Bloquear atalhos comuns
+document.addEventListener("keydown", function(e) {
+
+  // F12
+  if (e.key === "F12") {
+    e.preventDefault();
+    return false;
+  }
+
+  // Ctrl + Shift + I / J / C
+  if (e.ctrlKey && e.shiftKey && ["I", "J", "C"].includes(e.key.toUpperCase())) {
+    e.preventDefault();
+    return false;
+  }
+
+  // Ctrl + U
+  if (e.ctrlKey && e.key.toUpperCase() === "U") {
+    e.preventDefault();
+    return false;
+  }
+});
+
+// Detectar DevTools aberto
+(function detectDevTools() {
+  let aberto = false;
+  const element = new Image();
+  Object.defineProperty(element, "id", {
+    get() {
+      aberto = true;
+      throw new Error("DevTools detectado");
+    }
+  });
+
+  setInterval(() => {
+    aberto = false;
+    console.log(element);
+    console.clear();
+
+    if (aberto) {
+      document.body.innerHTML = "";
+      alert("Acesso bloqueado.");
+      location.reload();
+    }
+  }, 1000);
+})();
+
 </script>
 
 </body>
 </html>
+
